x2goclient (3.99.3.1-0~x2go1) UNRELEASED; urgency=low

  [ Christoffer Krakou ]
  * New upstream version (3.99.3.1):
    - Update Danish translation.

  [ Jan Engelhardt ]
  * New upstream version (3.99.3.1):
    - Fix Debian-like Qt path (qmake will handle it internally).

  [ Oleksandr Shneyder ]
  * Translation files updated.  Russian translation updated

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 Nov 2012 16:26:49 +0100

x2goclient (3.99.3.0-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.3.0):
    - Rebuild i18n files, add x2goclient_dk.ts for the new
      Danish translator (Christoffer Krakou).
    - Update German translation.
    - Run X2Go-proxied RDP session with fullscreen mode as sessions
      of X2Go session type "D". (Closes upstream issue #22)
    - Allow pass-through of username and password for X2Go-proxied RDP
      sessions. The strings X2GO_USER and X2GO_PASSWORD in rdpoptions
      will be replaced by username+password enter into X2Go Clients
      login dialog. Only replace username+password if they received a
      value from the login widget of the main window.
    - Drop i18n idea to translate English to English.
    - Fix creation of session profile icon on desktop. The .desktop
      files need the x-bit set. Also: add a compatibility profile name
      rewrite for PyHoca-GUI profile names containing a slash, PyHoca-GUI
      uses a slash as separator character for submenu cascades.
    - Use ,,printf'' instead of ,,echo -e'' (Bashism). Fixes creation of
      xinerama.conf files.
    - Add XFCE as possible session type. (Closes upstream issue: #51)
  * /debian/control:
    + Maintainer change in package: X2Go Developers <x2go-dev@lists.berlios.de>.
    + Add rdesktop and xfreerdp to Recommends.
    + Priority: optional.
    + Bin:package x2goplugin-provider: depend on x2goplugin.
  * New bin:package (all): x2goplugin-provider. Provide basic Apache2