@@ -11,6 +11,10 @@ x2goclient (3.99.3.1-0~x2go1) UNRELEASED; urgency=low
   [ Oleksandr Shneyder ]
   * Translation files updated.  Russian translation updated
 
+  [ Ricardo Diaz ]
+  * New upstream version (3.99.3.1):
+    - Update Spanish translation file.
+
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 Nov 2012 16:26:49 +0100
 
 x2goclient (3.99.3.0-0~x2go1) unstable; urgency=low
